frontend/src/Components/Post/post.scss
.card-container {
  width: 100%;
  border-radius: 10px;
  box-shadow: 1px 2px 6px 0px #afafaf7a;
  -webkit-box-shadow: 1px 2px 6px 0px #afafaf7a;
  margin: 30px 0;
}

.postWrapper {
  font-family: Segoe UI Historic, Segoe UI, Helvetica, Arial, sans-serif;
  padding: 10px 0px;
  background-color: white;
  border-radius: 10px;
}

.postTop {
  padding: 0 10px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  position: relative;
}
.postOptions {
  position: absolute;
  display: flex;
  right: 25px;
  flex-direction: column;
  align-items: flex-start;
  background-color: #f1f0f0;
  padding: 5px;
  margin-top: 10px;
  box-shadow: 1px 2px 6px 0px #afafaf7a;
  -webkit-box-shadow: 1px 2px 6px 0px #afafaf7a;
  font-weight: bold;
  border-radius: 5px;
  &Delete {
    width: 100%;
    color: red;
  }
}

.postTopLeft {
  display: flex;
  align-items: center;
}
.postTopRight {
  display: flex;
  flex-direction: row;
  align-items: center;
}
.postProfilePicture {
  width: 32px;
  height: 32px;
  border-radius: 50%;
  object-fit: cover;
  border: 1px solid #eaeaea;
}

.postUsername {
  font-size: 15px;
  font-weight: bold;
  margin: 0 10px;
  text-align: left;
  @media screen and (max-width: 345px) {
    font-size: 14px;
  }
}

.postDate {
  font-size: small;
  color: gray;
  text-align: left;
  margin-left: 10px;
}
.postTopUserAndDate {
  display: flex;
  flex-direction: column;
}
.postCenter {
  margin: 10px 0;
  text-align: left;
}
.update-post {
  display: flex;
  flex-direction: column;
  align-items: center;
  &-txt {
    color: black;
    border: none;
    width: 87%;
    font-size: 16px;
    font-family: Segoe UI Historic, Segoe UI, Helvetica, Arial, sans-serif;
    border-radius: 8px;
    background-color: #f1f0f0;
    &:focus {
      outline: none;
      border: 1px solid #7c7c7c;
    }
    &:hover {
      background-color: #e9e8e8;
    }
  }
  &-btn {
    border: none;
    padding: 7px;
    border-radius: 5px;
    font-weight: 500;
    margin-top: 5px;
    margin-right: 5px;
    cursor: pointer;
    background-color: #1877f2;
    color: white;
    &:hover {
      background-color: #0d6ae4;
    }
  }
  &-bottom {
    width: 90%;
    display: flex;
    align-items: center;
    justify-content: space-between;
  }
}
.cancel {
  background-color: #ff0000;
  &:hover {
    background-color: #cc0000;
  }
}

.postText {
  padding: 0 10px;
  font-size: 15px;
}
.postImg {
  margin-top: 10px;
  width: 100%;
  max-height: 500px;
  object-fit: contain;
}

.postBottom {
  padding: 0 10px;
  font-size: 15px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.postBottomLeft {
  display: flex;
  align-items: center;
}
.like-container {
  display: flex;
  align-items: center;
}
.likeCount {
  color: gray;
}
.likeIcon {
  width: 24px;
  height: 24px;
  margin-right: 5px;
  cursor: pointer;
}
.heart {
  display: flex;
  transition: all 150ms ease-in-out;
  &:active {
    transform: scale(1.1);
  }
}
.likeIconLiked {
  width: 24px;
  height: 24px;
  margin-right: 5px;
  cursor: pointer;
  & > * {
    fill: #c50000;
  }
}
.postLikeCounter {
  font-size: 15px;
}

.postCommentText {
  cursor: pointer;
  font-size: 15px;
  color: gray;
  &:hover {
    text-decoration: underline;
  }
}
.commentSection {
  margin-top: 5px;
  padding: 0 10px;
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  flex-direction: column;
}
.createComment {
  display: flex;
  flex-direction: row;
  align-items: center;
  width: 100%;
}
input.commentInput {
  width: 90%;
  border: none;
  padding: 8px;
  border-radius: 5px;
  background-color: #f1f0f0;
  &:focus {
    outline: none;
    border: 1px solid #7c7c7c;
  }
  &:hover {
    background-color: #e9e8e8;
  }
}
hr.commentHr {
  width: 95%;
  border: none;
  background-color: #d5d4d4;
  height: 1px;
}
.commentProfilePicture {
  width: 32px;
  height: 32px;
  border-radius: 50%;
  object-fit: cover;
  border: 1px solid #eaeaea;
  margin-right: 5px;
}

.icon-spin {
  -webkit-animation: icon-spin 2s infinite linear;
  animation: icon-spin 2s infinite linear;
}

@-webkit-keyframes icon-spin {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(359deg);
    transform: rotate(359deg);
  }
}

@keyframes icon-spin {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(359deg);
    transform: rotate(359deg);
  }
}

